--- a/Weather-App/custom.css
+++ b/Weather-App/custom.css
@@ -8,7 +8,7 @@
 main{
     width: 100%;
     height: 100vh;
-    background-color:#3498db ;
+    background-color: #6fd0f9 ;
     display: flex;
     justify-content: center;
     align-items: center;
